# simple_humanoid_controller

./: CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
etc/: SimpleHumanoidController.in.yaml
src/: CMakeLists.txt  SimpleHumanoidController.cpp  SimpleHumanoidController.h  api.h  lib.cpp  simple_humanoid_controller.cpp  simple_humanoid_controller.h
src/states/: CMakeLists.txt  SimpleHumanoidController_BaseMoveHand.cpp  SimpleHumanoidController_BaseMoveHand.h
tests/etc/: mc_rtc.yaml
